--- a/index.html
+++ b/index.html
@@ -14,17 +14,40 @@
 <body>
 
   <div id="app">
+    <header class="header">
+      <img class="logo" src="./assets/techno.svg" alt="TecnoLogo">
+      <div class="carrinho_menu">{{ carrinhoTotal | numeroPreco }} | {{ carrinho.length }}</div>
+      <ul>
+        <li v-for="(item, index) in carrinho">
+          <p> {{item.nome}} </p>
+          <button @click="removerItem(index)">X</button>
+        </li>
+      </ul>
+    </header>
 
-    <section class="modal" v-if="produto">
+    <section class="produtos">
+      <div v-for="item in produtos" @click="fetchProduto(item.id)" :key="item.id" class="produto">
+        <img :src="item.img" :alt="item.nome" class="produto_img" />
+        <div class="produto_info">
+          <span class="produto_preco">{{ item.preco | numeroPreco}}</span>
+          <h2 class="produto_titulo">{{ item.nome }}</h2>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="modal" v-if="produto" @click="fecharModal">
       <div class="modal_container">
         <div class="modal_img">
           <img :src="produto.img" :alt="produto.nome">
         </div>
         <div class="modal_dados">
+          <button @click="produto = false" class="modal_fechar">X</button>
           <span class="modal_preco">{{produto.preco}}</span>
           <h2 class="modal_titulo">{{produto.nome}}</h2>
           <p>{{produto.descricao}}</p>
-          <button class="modal_btn">Adicionar Item</button>
+          <button class="modal_btn" v-if="produto.estoque > 0" @click="adicionarItem">Adicionar Item</button>
+          <button v-else class="modal_btn esgotado" disabled>Produto esgotado!</button>
         </div>
         <div class="avaliacoes">
           <h2 class="avaliacoes_subtitulo">Avaliações</h2>
@@ -37,18 +60,6 @@
         </div>
       </div>
     </section>
-
-
-    <section class="produtos">
-      <div v-for="item in produtos" @click="fetchProduto(item.id)" :key="item.id" class="produto">
-        <img :src="item.img" :alt="item.nome" class="produto_img" />
-        <div class="produto_info">
-          <span class="produto_preco">{{ item.preco | numeroPreco}}</span>
-          <h2 class="produto_titulo">{{ item.nome }}</h2>
-        </div>
-      </div>
-    </section>
-
 
   </div>
 
