--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="modal_dados">
           <button @click="produto = false" class="modal_fechar">X</button>
-          <span class="modal_preco">{{produto.preco}}</span>
+          <span class="modal_preco">{{produto.preco | numeroPreco}}</span>
           <h2 class="modal_titulo">{{produto.nome}}</h2>
           <p>{{produto.descricao}}</p>
           <button class="modal_btn" v-if="produto.estoque > 0" @click="adicionarItem">Adicionar Item</button>
@@ -60,6 +60,10 @@
         </div>
       </div>
     </section>
+
+    <div class="alerta" :class="{ativo: alertaAtivo}">
+      <p class="alerta_mensagem"> {{mensagemAlerta}} </p>
+    </div>
 
   </div>
 
